--- a/CodeForU/ChatBot/templates/AskQ.html
+++ b/CodeForU/ChatBot/templates/AskQ.html
@@ -6,7 +6,41 @@ Chat with GPT
 {% endblock %}
 
 {% block content %}
-<div class="chat-limiter">
+<link href={% static "img/favicon.ico" %} rel="icon">
+
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap" rel="stylesheet">
+
+    <!-- Icon Font Stylesheet -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+
+    <!-- Libraries Stylesheet -->
+    <link href={%static  "lib/animate/animate.min.css" %} rel="stylesheet">
+    <link href={%static "lib/owlcarousel/assets/owl.carousel.min.css" %}  rel="stylesheet">
+
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href={%static "css/bootstrap.min.css" %} rel="stylesheet">
+
+    <!-- Template Stylesheet -->
+    <link href={%static "css/style.css" %} rel="stylesheet">
+    <link href={%static "css/animate.css" %} rel="stylesheet">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+<style>
+    body{
+        background: #9053c7;
+    background: -webkit-linear-gradient(-135deg, #c850c0, #4158d0);
+    background: -o-linear-gradient(-135deg, #c850c0, #4158d0);
+    background: -moz-linear-gradient(-135deg, #c850c0, #4158d0);
+    background: linear-gradient(-135deg, #c850c0, #4158d0);
+
+    }
+</style>
+<div class="chat-limiter" style="margin-top:100px;">
     <div class="chat-container" style="margin-top: 20px;">
         <div class="chat-messages" id="chat-messages">
             {% if conversation %}
