--- a/CodeForU/users/templates/answer_question.html
+++ b/CodeForU/users/templates/answer_question.html
@@ -54,7 +54,7 @@ Answer Question
        background-color: inherit; /* או אותו צבע רקע כמו במצב הרגיל */
    }
    </style>
-<div class="main-container">
+<div class="main-container" style="margin-top:120px;">
     <div class="pd-ltr-20 xs-pd-20-10">
         <div class="min-height-200px">
             <div class="row">
@@ -74,7 +74,7 @@ Answer Question
                                                 </div>
                                                 <div class="profile-task-list pb-30">
                                                     <div class="question-container">
-                                                        <h5 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Que ID: {{ question.id }}</h5>
+                                                        <h5 style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Question ID: {{ question.id }}</h5>
                                                         <br/>
                                                         <div class="task-type" style="color: grey; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Level: {{ question.level }}</div>
                                                         <div class="task-type" style="color: grey; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;" >Submitted by: {{ question.user }}</div>
