--- a/CodeForU/users/templates/mentor_dashboard.html
+++ b/CodeForU/users/templates/mentor_dashboard.html
@@ -45,31 +45,32 @@ Mentor Dashboard
 </style>
 </head>
 <body >
-    <br/>
-    <h1 style="display:flex;justify-content: center; align-items: center; color: white; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">  Welcome {{mentor.first_name}}!</h1>
-    <br/>
+    <div style="margin-top:100px;">
+        <br/>
+        <h1 style="display:flex;justify-content: center; align-items: center; color: white; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">  Welcome {{mentor.first_name}}!</h1>
+        <br/>
 
-    <section id="banner_parallax" class="slide_banner1">
-        <div class="container">
-           <div class="row">
-              <div class="col-md-12">
-                 <div class="full">
-                    <div class="slide_cont">
-                       <h2>CodeForU - a platform for learning code programming using AI</h2>
+        <section id="banner_parallax" class="slide_banner1">
+            <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="full">
+                        <div class="slide_cont">
+                        <h2>CodeForU - a platform for learning code programming using AI</h2>
+                        </div>
                     </div>
-                 </div>
-              </div>
-              <div class="col-md-6">
-                <div class="slide_pc_img wow fadeInRight" data-wow-delay="0.5s" data-wow-duration="1s"> 
+                </div>
+                <div class="col-md-6">
+                    <div class="slide_pc_img wow fadeInRight" data-wow-delay="0.5s" data-wow-duration="1s"> 
 
-                 </div>
-              </div>
-           </div>
-        </div>
-     </section>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </section>
 
-    <!-- Carousel End -->
-
+        <!-- Carousel End -->
+    </div>
 
     <!-- Service Start -->
     <div class="container-xxl py-5">
