--- a/CodeForU/users/templates/mentor_submissions.html
+++ b/CodeForU/users/templates/mentor_submissions.html
@@ -54,7 +54,7 @@
                             </div>
                             <button class="btn btn-secondary mt-3" disabled>This Question is Already Graded</button>
                         {% else %}
-                             
+                        <a href="{% url 'users:grade_question' question.id %}" class="btn btn-primary mt-3">Grade This Question</a>
                         {% endif %}
                     </div>
                 </li>
