--- a/CodeForU/templates/layout.html
+++ b/CodeForU/templates/layout.html
@@ -168,19 +168,20 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
+      
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
           <a href={% if user.is_student %} "/users/student_dashboard" {% elif user.is_mentor %} "/users/mentor_dashboard" {% endif %} class="nav-item nav-link custom-button">Home</a>
           <a href="{% url 'users:questions_list' %}" class="nav-item nav-link custom-button"
             >Questions</a
           >
+          
           {% if user.is_mentor %}
           <a href="/chat/" class="nav-item nav-link custom-button">Add Question</a>
           <a href="/users/submit-help-request" class="nav-item nav-link custom-button"
             >Requests</a
           >
           <a href="{% url 'users:mentor_submissions' %}" class="nav-item nav-link custom-button">Student Submissions</a>
-          
           <a href="/users/mentor_studentlist" class="nav-item nav-link custom-button"
             >My Students</a
           >
@@ -196,6 +197,29 @@
 
           {% endif %}
         </div>
+        <li class="nav-item dropdown">
+          <a class="nav-link custom-button" href="#" id="notificationDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            {% if user.is_authenticated %}
+            <i class="bi bi-bell-fill"></i>
+            {% endif %}
+            {% if user.notifications > 0 %}
+              <span class="badge bg-danger">{{ user.notifications }}</span>
+            {% endif %}
+          </a>
+          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="notificationDropdown">
+            {% if user.get_notification_messages %}
+              {% for message in user.get_notification_messages %}
+                
+                <li><a class="dropdown-item" href="#">{{ message }}</a></li>
+              {% endfor %}
+            {% else %}
+              <li><span class="dropdown-item-text">No new notifications</span></li>
+            {% endif %}
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="{% url 'users:clear_notifications' %}">Clear Notifications</a></li>
+          </ul>
+        </li>
+  
         {% if user.is_authenticated %}
         <form id="logout-form" action="{% url 'users:logout' %}" method="post">
           {% csrf_token %}
