--- a/CodeForU/templates/layout.html
+++ b/CodeForU/templates/layout.html
@@ -178,22 +178,21 @@
           
           {% if user.is_mentor %}
           <a href="/chat/" class="nav-item nav-link custom-button">Add Question</a>
-          <a href="/users/submit-help-request" class="nav-item nav-link custom-button"
-            >Requests</a
+          <a href="{% url 'users:submit_help_request' %}" class="nav-item nav-link custom-button">Requests</a
           >
           <a href="{% url 'users:mentor_submissions' %}" class="nav-item nav-link custom-button">Student Submissions</a>
-          <a href="/users/mentor_studentlist" class="nav-item nav-link custom-button"
+          <a href="{% url 'users:mentor_studentlist' %}" class="nav-item nav-link custom-button"
             >My Students</a
           >
-          <a href="/users/mentor_profile" class="nav-item nav-link custom-button">Profile</a>
+          <a href="{% url 'users:mentor_profile' %}" class="nav-item nav-link custom-button">Profile</a>
 
           {% endif %} {% if user.is_student %}
-          <a href="/users/student_mentor_request" class="nav-item nav-link custom-button"
+          <a href="{%url 'users:student_mentor_request'%}" class="nav-item nav-link custom-button"
             >Requests</a
           >
           <a href="{% url 'users:student_submissions' %}" class="nav-item nav-link custom-button">My Submissions</a>
 
-          <a href="/users/student_profile" class="nav-item nav-link custom-button">Profile</a>
+          <a href="{% url 'users:student_profile' %}" class="nav-item nav-link custom-button">Profile</a>
 
           {% endif %}
         </div>
